build: enable preview feature for next platform